# atlas-tdd-dezember-2025

./: README.md
EuroToDollarSimplified/source/presenter/: euro_to_dollar_presenter_impl.h
EuroToDollarSimplified/tests/presenter/: euro_to_dollar_presenter_test.cpp  euro_to_dollar_presenter_test.h
ParameterTestProjekt/tests/games/take_game/players/: computer_player_test.cpp  computer_player_test.h
PersonenServiceProjekt/: CMakeLists.txt
PersonenServiceProjekt/source/persistence/: person.h
PersonenServiceProjekt/source/services/: blacklist_service.h  personen_service.h  personen_service_impl.h
PersonenServiceProjekt/tests/: CMakeLists.txt
PersonenServiceProjekt/tests/services/: Mockblacklist_service.h  personen_service_impl_test.cpp  personen_service_impl_test.h
QT6EuroToDollarCalculator/source/presenter/: euro_to_dollar_presenter_impl.h
TDDDemo/source/collection/: Stapel.h
TDDDemo/tests/: CMakeLists.txt
TDDDemo/tests/collections/: StapelTest.cpp  StapelTest.h
Tag1_01StapelProjekt/: CMakeLists.txt
Tag1_01StapelProjekt/source/collections/: Stapel.cpp  Stapel.h
Tag1_01StapelProjekt/tests/: CMakeLists.txt
Tag1_01StapelProjekt/tests/collections/: StapelTest.cpp  StapelTest.h
Tag1_02SchweinProjekt/: CMakeLists.txt
Tag1_02SchweinProjekt/source/tiere/: Schwein.h
Tag1_02SchweinProjekt/tests/: CMakeLists.txt
Tag1_02SchweinProjekt/tests/services/: MultImpl.h  MyServiceUsingDependencyTest.cpp  MyServiceUsingDependencyTest.h
Tag1_02SchweinProjekt/tests/tiere/: SchweinTest.cpp
